starting the css

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
     <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
-<body>
+<body class="light-theme" aria-label="O site está utilizando o tema claro" role="body">
     
-    <header>
+    <header aria-label="cabeçalho da pagina">
 
         <audio id="music">
             <source src="./assets/musics/normal-world.mpeg">
@@ -38,7 +38,7 @@
 
     </header>
 
-    <main>
+    <main aria-label="corpo da página">
 
         <section id="section-inverted-world" class="container">
 
@@ -149,7 +149,7 @@
 
     </main>
 
-    <footer>
+    <footer aria-label="rodapé da pagina">
 
         <p>
             Project build for study purposes, with the objective of learning web development.
