--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   </head>
   <body class="light-theme" aria-label="O site está utilizando o tema light" role="body">
     <header aria-label="Cabeçalho da página.">
-      <audio id="music">
-        <source src="assets/musics/normal-world.mpeg" aria-details="Audio do site" />
+      <audio id="music" src="./assets/musics/normal-world.mpeg">
       </audio>
       <div class="header-content">
         <img class="invert-element" src="assets/images/banner/logo.svg" alt="Imagem principal Mundo Invertido. Semana Frontend DIO." />
